# MediaKit

./: .gitignore  Untitled Diagram.drawio
Source/: .cproject  .tags  .tags_sorted_by_file  CMakeLists.txt  common.cmake  mediacore.gyp
Source/MTF/mtf/: CurrentTime.cpp  CurrentTime.h  Noncopyable.h  unitTest_currentTime
Source/MTF/mtf/unitTest/: unitTest_currentTime.cpp
Source/MediaCore/: .CMakeLists.txt.swp  .common.cmake.swp  .cproject  .main.cpp.swo  .main.cpp.swp  .project  .tags  .tags_sorted_by_file  AVPipeline.cpp  AVPipeline.h  AVPipelineAudioDelegate.cpp  AVPipelineAudioDelegate.h  AVPipelineDelegate.h  AVPipelineObserver.h  a.out  main.cpp  main.cpp.old  rgb2bmp.h
Source/MediaCore/ThreadManager/: ThreadManager.cpp  ThreadManager.h
Source/MediaCore/base/: .ImageType.cpp.swp  CommonDef.h  SnailConfig.h  SnailException.h
Source/MediaCore/media/: AudioDecodedFrame.h  AudioDecoder.cpp  AudioDecoder.h  MediaContext.h  MediaDecoder.cpp  MediaDecoder.h  MediaDecoderDelegate.h  MediaDecoderImpl.cpp  MediaDecoderImpl.h  MediaHandler.cpp  MediaHandler.h  MediaParser.cpp  MediaParser.h  MediaParserBase.cpp  MediaParserBase.h  MediaParserDelegate.h  PlayControl.cpp  PlayControl.h  VideoDecodedFrame.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderDelegate.h
Source/MediaCore/media/.svn/: all-wcprops  entries
Source/MediaCore/media/.svn/text-base/: AudioDecoder.cpp.svn-base  MediaHandler.cpp.svn-base  MediaParser.cpp.svn-base  PlayControl.cpp.svn-base  VideoDecoder.cpp.svn-base
Source/MediaCore/media/FFmpeg/: .VideoDecoderFFmpeg.cpp.swo  .VideoDecoderFFmpeg.cpp.swp  AudioDecoderFFmpeg.cpp  AudioDecoderFFmpeg.h  MediaParserFFmpeg.cpp  MediaParserFFmpeg.h  VideoDecoderFFmpeg.cpp  VideoDecoderFFmpeg.h
Source/MediaCore/netWork/: FileStreamProvider.cpp  FileStreamProvider.h  IOChannel.cpp  IOChannel.h  InputStreamProvider.cpp  InputStreamProvider.h  NetworkAdapter.h  Url.cpp  Url.h
Source/MediaCore/netWork/bt/: BtFileAdapter.cpp  BtFileAdapter.h
Source/MediaCore/netWork/bt/.svn/: all-wcprops  entries
Source/MediaCore/netWork/bt/.svn/text-base/: BtFileAdapter.cpp.svn-base
Source/MediaCore/netWork/curl/: CurlAdapter.cpp
Source/MediaCore/platform/: PlatformType.h  SharedTimer.h  ThreadGlobalData.cpp  ThreadGlobalData.h  ThreadTimersManager.cpp  ThreadTimersManager.h  Timer.cpp  Timer.h  tags
Source/MediaCore/platform/linux/: SharedTimerLinux.cpp
Source/MediaCore/platform/unitTest/: makefile  timer_unittest  timer_unittest.cpp
Source/MediaCore/sound/: SoundHandler.h
Source/MediaCore/sound/sdl/: SoundHandlerSDL.cpp  SoundHandlerSDL.h
Source/MediaCore/timer/: SchedulerTimer.cpp  SchedulerTimer.h
Source/mediacore.xcodeproj/: project.pbxproj
Source/mediacore.xcodeproj/project.xcworkspace/xcshareddata/: mediacore.xccheckout
Source/mediacore.xcodeproj/project.xcworkspace/xcuserdata/linan.xcuserdatad/: UserInterfaceState.xcuserstate
Source/mediacore.xcodeproj/xcuserdata/linan.xcuserdatad/xcschemes/: All.xcscheme  MediaKitDemo.xcscheme  mediacore.xcscheme  xcschememanagement.plist
depend/mac/lib/boost/: libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_context.dylib  libboost_coroutine.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_graph.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_log.dylib  libboost_log_setup.dylib  libboost_math_c99.dylib  libboost_math_c99f.dylib  libboost_math_c99l.dylib  libboost_math_tr1.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options.dylib  libboost_python.dylib  libboost_random.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_unit_test_framework.dylib  libboost_wave.dylib  libboost_wserialization.dylib
depend/mac/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/media/: av_pipeline.cpp  av_pipeline.h
src/media/FFmpeg/: ffmpeg_common.cpp  ffmpeg_common.h
src/media/base/: channel_layout.h  pipeline_status.h  sample_format.h
src/media/demuxer/: ffmpeg_demuxer.cpp  ffmpeg_demuxer.h  ffmpeg_demuxer_stream.cpp  ffmpeg_demuxer_stream.h
